endpoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
spec:
  ports:
  - port: 3
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
subsets:
  - addresses:
      - ip: 172.16.4.192
    ports:
      - port: 3
  - addresses:
      - ip: 172.16.4.249
    ports:
      - port: 3
  - addresses:
      - ip: 172.16.4.250
    ports:
      - port: 3
